# Agentic-ai

./: .gitignore  agent.py  claude_agent.py  pyproject.toml  rag.py  readme.md  server.py  test.py  test_agent.py  tools.py
frontend/: index.html
knowledge_base/: access_control.md  assembly.md  delegatecall.md  fund_drain.md  new_wallet_attacker.md  reentrancy.md  selfdestruct.md  tx_origin.md
