[project]
name = "agentic-smart-contract-scanner"
version = "0.1.0"
description = "Agentic AI powered Ethereum Smart Contract Security Scanner"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "groq>=0.31.0",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "flask>=3.1.1",
    "flask-cors>=6.0.1",
]

