[project]
name = "agentic-smart-contract-scanner"
version = "0.1.0"
description = "Agentic AI powered Ethereum Smart Contract Security Scanner"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.116.0",
    "uvicorn>=0.35.0",
    "groq>=0.31.0",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "pydantic>=2.11.0",
]